--- a/examples/simple_four_bar/BUILD.bazel
+++ b/examples/simple_four_bar/BUILD.bazel
@@ -1,9 +1,44 @@
 # -*- python -*-
+load(
+    "@drake//tools/skylark:drake_cc.bzl",
+    "drake_cc_googletest",
+    "drake_cc_library",
+    "drake_cc_binary",
+)
 
 load("//tools/lint:lint.bzl", "add_lint_tests")
 load("//tools/install:install_data.bzl", "install_data")
 
 package(default_visibility = ["//visibility:public"])
+
+drake_cc_binary(
+    name = "FourBar_test",
+    srcs = ["FourBar_test.cc"],
+    add_test_rule = 1,
+    data = [":models"],
+    test_rule_args = ["-realtime_factor=0.0"],
+    deps = [
+        "//common:find_resource",
+        "//common:text_logging_gflags",
+        "//common/trajectories:piecewise_polynomial",
+        "//lcm",
+        "//attic/multibody:inverse_kinematics",
+        "//attic/multibody:rigid_body_tree",
+        "//attic/multibody/joints",
+        "//attic/multibody/parsers",
+        "//attic/multibody:rigid_body_tree_construction",
+        "//attic/multibody/rigid_body_plant",
+        "//attic/multibody/rigid_body_plant:drake_visualizer",
+        "//attic/multibody/rigid_body_plant:frame_visualizer",
+        "//systems/analysis:simulator",
+        "//systems/primitives:constant_vector_source",
+        "//systems/framework:diagram",
+        "//systems/lcm",
+        "//attic/manipulation/util:sim_diagram_builder",
+        "@gflags",
+    ],
+)
+
 
 install_data()
 
